--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "postcss": "^8.2.8",
     "react": "^17.0.2",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.0.4"
   },
