--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "@tailwindcss/jit": "^0.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.2.5",
     "clsx": "^1.1.1",
     "postcss": "^8.2.8",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
