--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.0.0",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.2.5",
     "clsx": "^1.1.1",
