--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@headlessui/react": "^1.0.0",
