--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "isumiweb",
   "version": "0.0.0",
+  "homepage": "https://isumi.com.br/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/react": "^1.0.0",
@@ -32,6 +35,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "^1.4.0",
+    "gh-pages": "^3.1.0",
     "typescript": "^4.2.4",
     "vite": "^2.1.5"
   }
